tests/snapshots/regression-beacons-triglavian_invasion_strong.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Vexor
ship/capacitorStablePercentage               = 87.611199
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 6.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 19.200000
ship/passiveShieldEffectiveRechargeRate      = 5.779967
ship/passiveShieldRechargeRate               = 3.666667
ship/velocityBoost                           = 157.220497
ship/ehp                                     = 10256.129169
ship/shieldThermalDamageEffectiveResonance   = 0.175000
ship/shieldKineticDamageEffectiveResonance   = 0.131250
ship/shieldExplosiveDamageEffectiveResonance = 0.109375
ship/shieldEmDamageEffectiveResonance        = 0.218750
ship/hullThermalDamageEffectiveResonance     = 0.100500
ship/hullKineticDamageEffectiveResonance     = 0.100500
ship/hullExplosiveDamageEffectiveResonance   = 0.100500
ship/hullEmDamageEffectiveResonance          = 0.100500
ship/armorThermalDamageEffectiveResonance    = 0.138125
ship/armorKineticDamageEffectiveResonance    = 0.138125
ship/armorExplosiveDamageEffectiveResonance  = 0.191250
ship/armorEmDamageEffectiveResonance         = 0.106250
ship/shieldEhp                               = 2167.487658
ship/hullEhp                                 = 3731.343042
ship/armorEhp                                = 4357.298468
ship/shieldDamageEffectiveResonance          = 0.634375
ship/hullDamageEffectiveResonance            = 0.402000
ship/armorDamageEffectiveResonance           = 0.573750
ship/droneCapacityLoad                       = 25.000000
ship/droneActive                             = 5.000000
ship/droneDamagePerSecond                    = 89.471248
ship/damagePerSecondWithReload               = 89.471248
ship/damagePerSecondWithoutReload            = 89.471248
ship/powerFree                               = 818.000000
ship/cpuFree                                 = 290.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 76.041379
ship/capacitorPeakDelta                      = 9.521589
ship/capacitorPeakLoad                       = 3.000000
ship/capacitorPeakRecharge                   = 12.521589
ship/alignTime                               = 4.640191
ship/mass                                    = 16100000.000000
ship/hp                                      = 1500.000000
ship/powerOutput                             = 875.000000
ship/powerLoad                               = 57.000000
ship/maxVelocity                             = 626.974961
ship/cpuOutput                               = 375.000000
ship/cpuLoad                                 = 85.000000
ship/rechargeRate                            = 361875.000000
ship/agility                                 = 0.207900
ship/maxTargetRange                          = 65625.000000
ship/scanSpeed                               = 4125.000000
ship/kineticDamageResonance                  = 0.402000
ship/thermalDamageResonance                  = 0.402000
ship/explosiveDamageResonance                = 0.402000
ship/emDamageResonance                       = 0.402000
ship/warpCapacitorNeed                       = 0.000000
ship/scanMagnetometricStrength               = 19.200000
ship/shieldCapacity                          = 1375.000000
ship/armorHP                                 = 2500.000000
ship/armorEmDamageResonance                  = 0.425000
ship/armorExplosiveDamageResonance           = 0.765000
ship/armorKineticDamageResonance             = 0.552500
ship/armorThermalDamageResonance             = 0.552500
ship/shieldEmDamageResonance                 = 0.875000
ship/shieldExplosiveDamageResonance          = 0.437500
ship/shieldKineticDamageResonance            = 0.525000
ship/shieldThermalDamageResonance            = 0.700000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 937500.000000
ship/capacitorCapacity                       = 1812.500000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 350.000000
ship/shipBonusGC2                            = 50.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/droneBandwidthLoad                      = 25.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

incoming_effect_1/type                     = Triglavian Invasion Strong System Effects
incoming_effect_1/effect                   = systemMiningCycleTimeBonus
incoming_effect_1/miningDurationMultiplier = -45.000000
incoming_effect_2/type                     = Triglavian Invasion Strong System Effects
incoming_effect_2/effect                   = systemDroneSpeedBonusPercent
incoming_effect_2/droneMaxVelocityBonus    = -50.000000
incoming_effect_3/type                     = Triglavian Invasion Strong System Effects
incoming_effect_3/effect                   = systemDroneDamageBonusPercent
incoming_effect_3/droneDamageBonus         = -50.000000
incoming_effect_4/type                     = Triglavian Invasion Strong System Effects
incoming_effect_4/effect                   = systemAgilityBonusPercentItem
incoming_effect_4/agilityBonus             = -45.000000
incoming_effect_5/type                     = Triglavian Invasion Strong System Effects
incoming_effect_5/effect                   = 	systemHullHPBonusPercentItem
incoming_effect_5/hullHpBonus              = -40.000000

medium_1/type              = 10MN Afterburner II
medium_1/state             = active
medium_1/capacitorPeakLoad = 3.000000
medium_1/cycleTime         = 7500.000000
medium_1/capacitorNeed     = 22.500000
medium_1/speedFactor       = 168.750000
medium_1/duration          = 7500.000000
medium_1/heatDamage        = 4.275000

low_1/type  = Damage Control II
low_1/state = online

low_2/type             = Drone Damage Amplifier II
low_2/state            = online
low_2/hp               = 75.000000
low_2/damageMultiplier = 1.355625

dronebay_1-5/type                         = Hobgoblin II
dronebay_1-5/state                        = active
dronebay_1-5/damageVolley                 = 71.576998
dronebay_1-5/speedWithReload              = 4000.000000
dronebay_1-5/damagePerSecondWithoutReload = 17.894250
dronebay_1-5/hp                           = 450.000000
dronebay_1-5/maxVelocity                  = 2100.000000
dronebay_1-5/maxRange                     = 2625.000000
dronebay_1-5/damageMultiplier             = 3.578850
dronebay_1-5/shieldCapacity               = 112.500000
dronebay_1-5/armorHP                      = 202.500000
